--- a/Review_Sentiment_Analysis_Positve_Negative_Neutral.ipynb
+++ b/Review_Sentiment_Analysis_Positve_Negative_Neutral.ipynb
@@ -970,7 +970,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Обработанный DataFrame:\n",
+            "Processed DataFrame:\n",
             "   Score                                           all_text\n",
             "0      5  Good Quality Dog Food I have bought several of...\n",
             "1      1  Not as Advertised Product arrived labeled as J...\n",
@@ -978,7 +978,7 @@
             "3      2  Cough Medicine If you are looking for the secr...\n",
             "4      5  Great taffy Great taffy at a great price.  The...\n",
             "\n",
-            "Количество строк после обработки: 568454\n"
+            "Quantity rows after processing: 568454\n"
           ]
         }
       ]
